# euler-rust

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/math/: factors.rs  mod.rs  primes.rs
src/prob1/: brute_force.rs  mod.rs  solver.rs
src/prob10/: mod.rs
src/prob2/: fib.rs  mod.rs
src/prob3/: mod.rs
src/prob4/: mod.rs  palindromes.rs
src/prob5/: mod.rs
src/prob6/: mod.rs
src/prob7/: mod.rs
src/prob8/: mod.rs
src/prob9/: mod.rs
